r41 - may, 10, 2009
	* Association : bilanSuccess.php : the blank line before 'total' line got
	  light grey color
	* /doc/index.html : updated
	* loginSuccess.php : we notice that that it's a beta version
	* layout.php : links to 'report bug' form has been added in the menu
	* README : new part 'troubleshooting'
	

r40 - may, 10, 2009
	* CotisationPeer : new method doSeletSumForAccountId($id)
	* Association : bilan > takes care of Cotisation objects when computing
	  total amounts
	* CotisationPeer : new method doSeletSumForAssociationId($id)
	* Association : action > bilan > action class gives the $totalCotisations to
	  the view
	* Activite.php : each method returns 0 instead of null


r39 - may, 10, 2009
	* /lib/misc\StringTools.class.php : new file
	* StringTools.class.php : new method to7bits()
	* Membre : actions > map > fixed bug when putting a string with accents
	* Membre : actions > mp > default zoom level has been set to 12 to see
	  the whole France map
	* Depense : actions > new action 'export'
	* Recette : actions > new action 'export'


r38 - may, 10, 2009
	* Cotisation : _form.php > 'delete' link has been translated to French
	* Cotisation : indexSuccess.php > link to 'delete' action is now displayed 
	* Compte : indexSuccess.php > link to 'delete' action is now displayed
	* Compte.php : delete() method has been overidden
	* Compte : actions > 'mis_a_jour_par' field gets the correct default value
	* Compte : _form.php : correct style of 'delete' link is applied
	* Statut : _form.php : correct style of 'delete' link is applied (and link
	  has been translated to French)
	* /web/images/tooltip_icon.gif : cropped to solve a very little align issue
	* DepenseForm.class.php : image of calendar is displayed even if no virtual
	  host has been set up
	* RecetteForm.class.php : image of calendar is displayed even if no virtual
	  host has been set up
	* MembreForm.class.php : image of calendar is displayed even if no virtual
	  host has been set up